--- a/index.htm
+++ b/index.htm
@@ -61,10 +61,10 @@
                             src="img/sparkle.png"
                             alt="sparkle" class="mr-3"></a></li>
                 <li><a href="#"><img
-                            src="img/photographer.png?raw=true"
+                            src="img/photographer.png"
                             alt="photographer" class="mr-3"></a></li>
                 <li><a href="#"><img
-                            src="img/people-2.png?raw=true"
+                            src="img/people-2.png"
                             alt="William-picture2"></a></li>
             </ul>
         </div>
